add crud fetch